# triet-hoc

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  pyproject.toml
backend/: requirements.txt
backend/alembic/versions/: 32778a26a08c_add_deep_fingerprinting_fields.py  4077311c523b_add_users_table.py  9a1c4b7e2f10_add_course_status.py
backend/app/: main.py
backend/app/api/routes/: __init__.py  admin_courses.py  admin_visitors.py  auth.py  courses.py  history.py  questions.py  survey.py  tracking.py  users.py
backend/app/core/: security.py
backend/app/models/: __init__.py  course_status.py  page_visit.py  survey_session.py  user.py
backend/app/repositories/: course_status_repository.py  result_repository.py  survey_repository.py  user_repository.py
backend/app/schemas/: course_schema.py  user_schema.py
backend/app/seed/: questions_seed.py  seed_data.py
backend/app/services/: course_service.py  scoring_service.py  survey_service.py
backend/app/tests/: test_course_status.py
frontend/: index.html  package-lock.json  tailwind.config.ts
frontend/src/app/: App.tsx  AtmosphereBackground.tsx  router.tsx
frontend/src/features/auth/: types.ts
frontend/src/pages/: AboutPage.tsx  KnowledgePage.tsx  LandingPage.tsx  QuizIntroPage.tsx  ResultPage.tsx
frontend/src/pages/admin/: AdminCoursesPage.tsx  AdminVisitorsPage.tsx
frontend/src/pages/auth/: LoginPage.tsx  RegisterPage.tsx
frontend/src/pages/user/: HistoryPage.tsx
frontend/src/shared/api/: httpClient.ts
frontend/src/shared/components/: LoadingState.tsx  MusicPlayer.tsx  PageShell.tsx
(+11 files in other folders)
