[project]
name = "triet-ly-la-gi"
version = "0.1.0"
description = "Full-stack Vietnamese philosophy quiz MVP."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.1",
  "pydantic[email]>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "pytest>=8.3.0",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.0",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/app/tests"]
